deployment-soap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petstore-soap-service
  name: petstore-soap-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petstore-soap-service
  template:
    metadata:
      labels:
        app: petstore-soap-service
    spec:
      containers:
      - image: murphye/dummy-petstore-soap-service
        name: petstore-soap-service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petstore-soap-service
  name: petstore-soap-service
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: petstore-soap-service
